# rest-API

./: CMakeLists.txt  Dockerfile
docs/: Database.md  README.md  device-api.yaml
src/: main.cpp
src/database/: database_manager.cpp  database_manager.hpp
src/server/: server_manager.cpp  server_manager.hpp
src/utilities/: config.hpp  http_status_codes.hpp  metadata.hpp
